fixed some flex boxes

--- a/vsc/videos.html
+++ b/vsc/videos.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <special-header></special-header>
-    <main class="video-page">
+    <div class="video-page">
         <!-- Big YouTube Channel Link -->
         <div class="channel-link">
             <a href="https://www.youtube.com/@siopaolo" target="_blank">
@@ -43,7 +43,7 @@
                     allowfullscreen>
             </iframe>
         </div>
-    </main>
+    </div>
     <special-footer></special-footer>
     <script src="headerFooterManager.js"></script>
 </body>
