--- a/vsc/index.html
+++ b/vsc/index.html
@@ -7,13 +7,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css" />
 </head>
-<body>
+<body class="home-page">
     <special-header></special-header>
-    <section class="hero">
-        <h2>Welcome to the Official Website</h2>
-        <p>New music, exclusive merch, and more.</p>
-        <p>WORK IN PROGRESS WAITING FOR MEDIA</p>
-    </section>
+    <main class="main-content">
+        <div class="hero">
+            <h2>Welcome to the Official Website</h2>
+            <p>New music, exclusive merch, and more.</p>
+            <p>WORK IN PROGRESS WAITING FOR MEDIA</p>
+        </div>
+    </main>
     <special-footer></special-footer>
     <script src="headerFooterManager.js"></script>
 <body>
