--- a/vsc/videos.html
+++ b/vsc/videos.html
@@ -7,43 +7,45 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="styles/style.css" />
 </head>
-<body>
+<body class="video-page">
     <special-header></special-header>
-    <div class="video-page">
-        <!-- Big YouTube Channel Link -->
-        <div class="channel-link">
-            <a href="https://www.youtube.com/@siopaolo" target="_blank">
-                Visit siopaolo on YouTube
-                <img src="assets/images/youtube2.png" alt="YouTube" class="youtube-large-icon" />
-            </a>
-        </div>
+    <main class="main-content">
+        <div class="video-page">
+            <!-- Big YouTube Channel Link -->
+            <div class="channel-link">
+                <a class="youtube-link" href="https://www.youtube.com/@siopaolo" target="_blank">
+                    Visit siopaolo on YouTube
+                    <img src="assets/images/youtube2.png" alt="YouTube" class="youtube-large-icon" />
+                </a>
+            </div>
 
-        <!-- Latest Video -->
-        <h2>Latest Video</h2>
-        <div class="youtube-frame">
-            <iframe width="100%"
-                    height="400"
-                    src="https://www.youtube.com/embed/shxYpEms_Wo"
-                    title="Latest Video"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen>
-            </iframe>
-        </div>
+            <!-- Latest Video -->
+            <h2>Latest</h2>
+            <div class="youtube-frame">
+                <iframe width="100%"
+                        height="400"
+                        src="https://www.youtube.com/embed/shxYpEms_Wo"
+                        title="Latest"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen>
+                </iframe>
+            </div>
 
-        <!-- Popular Video -->
-        <h2>Popular Video</h2>
-        <div class="youtube-frame">
-            <iframe width="100%"
-                    height="400"
-                    src="https://www.youtube.com/embed/g-q3uMQrJuA"
-                    title="Popular Video"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen>
-            </iframe>
+            <!-- Popular Video -->
+            <h2>Trending</h2>
+            <div class="youtube-frame">
+                <iframe width="100%"
+                        height="400"
+                        src="https://www.youtube.com/embed/g-q3uMQrJuA"
+                        title="Trending"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen>
+                </iframe>
+            </div>
         </div>
-    </div>
+    </main>
     <special-footer></special-footer>
     <script src="headerFooterManager.js"></script>
 </body>
