--- a/vsc/shows.html
+++ b/vsc/shows.html
@@ -3,17 +3,12 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>siopaolo - Home</title>
+    <title>siopaolo - SHOWS</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css" />
 </head>
-<body class="home-page">
+<body>
     <special-header></special-header>
-    <div class="hero">
-        <h2>Welcome to the Official Website</h2>
-        <p>New music, exclusive merch, and more.</p>
-        <p>WORK IN PROGRESS WAITING FOR MEDIA</p>
-    </div>
     <special-footer></special-footer>
     <script src="headerFooterManager.js"></script>
 <body>
