--- a/vsc/videos.html
+++ b/vsc/videos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>siopaolo - Videos</title>
+    <title>siopaolo - VIDEOS</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="styles/style.css" />
 </head>
@@ -14,13 +14,13 @@
             <!-- Big YouTube Channel Link -->
             <div class="channel-link">
                 <a class="youtube-link" href="https://www.youtube.com/@siopaolo" target="_blank">
-                    Visit siopaolo on YouTube
+                    VISIT SIOPAOLO ON YOUTUBE
                     <img src="assets/images/youtube2.png" alt="YouTube" class="youtube-large-icon" />
                 </a>
             </div>
 
             <!-- Latest Video -->
-            <h2>Latest</h2>
+            <h2>LATEST</h2>
             <div class="youtube-frame">
                 <iframe width="100%"
                         height="400"
@@ -33,7 +33,7 @@
             </div>
 
             <!-- Popular Video -->
-            <h2>Trending</h2>
+            <h2>TRENDING</h2>
             <div class="youtube-frame">
                 <iframe width="100%"
                         height="400"
