--- a/vsc/shows.html
+++ b/vsc/shows.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <special-header></special-header>
+    <main  class="shows-page">
+    </main>
     <special-footer></special-footer>
     <script src="headerFooterManager.js"></script>
-<body>
+</body>
 </html>
