contact page and cleaned home page

--- a/vsc/contact.html
+++ b/vsc/contact.html
@@ -3,12 +3,28 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>siopaolo - CONTACT</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="styles/style.css" />
+    <title>siopaolo - HOME</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/contactStyle.css">
 </head>
 <body>
     <special-header></special-header>
+    <main class="contact-page">
+        <div class="contact-section">
+            <p class="label-headers">CONTACT</p>
+            <div class="contact-text">
+                <p class="important-headers"><u>BOOKING</u></p>
+                <p>team@siopaolo.com</p>
+                <p class="important-headers"><u>INQUIRIES</u></p>
+                <p>paolo@siopaolo.com</p>
+                <p class="important-headers"><u>WEBSITE ASSISTANCE</u></p>
+                <p>alec@siopaolo.com</p>
+            </div>
+    </main>
     <special-footer></special-footer>
     <script src="headerFooterManager.js"></script>
 </body>
