--- a/vsc/about.html
+++ b/vsc/about.html
@@ -3,18 +3,20 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>siopaolo - HOME</title>
+    <title>siopaolo - ABOUT</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/homeStyle.css">
-    <script src="aboutScript.js" defer></script>
+    <link rel="stylesheet" href="styles/aboutStyle.css">
 </head>
 <body>
     <special-header></special-header>
     <main  class="about-page">
+        <div class="about-section">
+
+        </div>
     </main>
     <special-footer></special-footer>
     <script src="headerFooterManager.js"></script>
