--- a/vsc/shows.html
+++ b/vsc/shows.html
@@ -3,18 +3,22 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>siopaolo - HOME</title>
+    <title>siopaolo - SHOWS</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/homeStyle.css">
-    <script src="homeScript.js" defer></script>
+    <link rel="stylesheet" href="styles/showsStyle.css">
 </head>
 <body>
     <special-header></special-header>
-    <main  class="shows-page">
+    <main class="shows-page">
+        <div class="shows-section">
+            <p class="label-headers">SHOWS</p>
+            <div class="contact-text">
+                <p>TO BE ANNOUNCED</p>
+            </div>
     </main>
     <special-footer></special-footer>
     <script src="headerFooterManager.js"></script>
