compressed backgroudns and preloaded

--- a/vsc/index.html
+++ b/vsc/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>siopaolo - HOME</title>
+    <link rel="preload" as="image" href="assets/images/backgrounds/home.webp" fetchpriority="high">
+    <link rel="preload" as="image" href="assets/images/backgrounds/music.webp" fetchpriority="high">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,16 +22,16 @@
                 <p class="label-headers">MERCH</p>
                 <div class="merch-grid">
                 <a href="https://shop.siopaolo.com/products/siopaolo-rustic-hat" class="merch-item">
-                    <img src="assets/images/merch/hatBlack.png" alt="Black Rustic Hat">
+                    <img src="assets/images/merch/hatBlack.webp" alt="Black Rustic Hat">
                 </a>
                 <a href="https://shop.siopaolo.com/products/siopaolo-rustic-hat" class="merch-item">
-                    <img src="assets/images/merch/hatBrown.png" alt="Brown Rustic Hat">
+                    <img src="assets/images/merch/hatBrown.webp" alt="Brown Rustic Hat">
                 </a>
                 <a href="https://shop.siopaolo.com/products/siopaolo-blossom-shirt" class="merch-item black-shirt">
-                    <img src="assets/images/merch/shirtBlackBack.png" alt="Oversized Blossom Shirt" class="swap-img" data-hover="assets/images/merch/shirtBlackFront.png">
+                    <img src="assets/images/merch/shirtBlackBack.webp" alt="Oversized Blossom Shirt" class="swap-img" data-hover="assets/images/merch/shirtBlackFront.webp">
                 </a>
                 <a href="https://shop.siopaolo.com/products/siopaolo-doodle-shirt" class="merch-item">
-                    <img src="assets/images/merch/shirtBeige.png" alt="Doodle Shirt">
+                    <img src="assets/images/merch/shirtBeige.webp" alt="Doodle Shirt">
                 </a>
                 </div>
                 <a href="https://shop.siopaolo.com" class="view-all">SHOW MORE</a>
