--- a/vsc/shows.html
+++ b/vsc/shows.html
@@ -17,7 +17,7 @@
     <main class="shows-page">
         <div class="shows-section">
             <p class="label-headers">SHOWS</p>
-            <div class="contact-text">
+            <div class="shows-text">
                 <p>TO BE ANNOUNCED</p>
             </div>
     </main>
